# opengltutorial-Exercises

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run
res/: GreenFragmentShader.txt  YellowFragmentShader.txt
src/: simplewindow.cpp
src/common/: app.cpp  app.hpp  app_delegate.hpp  shader.cpp  shader.hpp
src/hello_triangle/: hello_triangle.cpp  hello_triangle.hpp  main.cpp
